...
            <TextView
                android:id="@+id/estimated_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/estimated_time"
                app:layout_constraintBottom_toTopOf="@+id/actual_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/routine_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/actual_time"
...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <Button
                    android:id="@+id/start_routine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/start_routine" />

...
                android:layout_margin="4dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                android:text="@string/add_task" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fast_forward_timer_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:src="@drawable/ic_ff_timer"
                app:fabCustomSize="35dp" />
...
            <FrameLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/pause_timer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/pause"
                    android:src="@android:drawable/ic_media_pause"
                    app:fabCustomSize="35dp"
                    android:layout_gravity="center" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/restart_timer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/restart"
                    android:src="@android:drawable/ic_media_play"
                    app:fabCustomSize="35dp"
...
