...
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/start_routine_button"
            android:layout_width="150dp"
            android:layout_height="54dp"
            android:text="Start Routine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_task_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="150dp"
            android:layout_height="54dp"
...
